--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test:dev": "nodemon ./node_modules/mocha/bin/mocha server/**/*test.js",
+    "webpack": "./node_modules/webpack/bin/webpack.js",
+    "webpack:dev": "webpack --watch --mode=development",
+    "start:dev": "npm run webpack:dev & DATABASE_URL=postgres://localhost/fullstacktrash PORT=3000 nodemon server --ignore /dist /client",
+    "postinstall": "npm run webpack",
+    "start": "node server"
   },
   "repository": {
     "type": "git",
@@ -39,5 +44,11 @@
     "supertest": "^3.3.0",
     "webpack": "^4.23.0",
     "webpack-cli": "^3.1.2"
+  },
+  "babel": {
+    "presets": [
+      "env",
+      "react"
+    ]
   }
 }
