--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "chai": "^4.2.0",
     "express": "^4.16.4",
     "mocha": "^5.2.0",
+    "nodemon": "^1.18.5",
     "pg": "^7.5.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
