--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/FullstacksOfTrash/grace-shopper#readme",
   "dependencies": {
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "aws-sdk": "^2.346.0",
     "axios": "^0.18.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
