--- a/package.json
+++ b/package.json
@@ -23,19 +23,10 @@
   },
   "homepage": "https://github.com/FullstacksOfTrash/grace-shopper#readme",
   "dependencies": {
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "axios": "^0.18.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.3",
-    "chai": "^4.2.0",
     "express": "^4.16.4",
     "jwt-simple": "^0.5.5",
-    "mocha": "^5.2.0",
-    "nodemon": "^1.18.5",
     "pg": "^7.5.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
@@ -46,9 +37,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "sequelize": "^4.41.0",
-    "stripe": "^6.13.0",
-    "webpack": "^4.23.0",
-    "webpack-cli": "^3.1.2"
+    "stripe": "^6.13.0"
   },
   "babel": {
     "presets": [
@@ -57,6 +46,17 @@
     ]
   },
   "devDependencies": {
-    "supertest": "^3.3.0"
+    "nodemon": "^1.18.5",
+    "mocha": "^5.2.0",
+    "chai": "^4.2.0",
+    "supertest": "^3.3.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "webpack": "^4.23.0",
+    "webpack-cli": "^3.1.2"
   }
 }
