--- a/package.json
+++ b/package.json
@@ -48,16 +48,17 @@
     ]
   },
   "devDependencies": {
-    "nodemon": "^1.18.5",
-    "mocha": "^5.2.0",
-    "chai": "^4.2.0",
-    "supertest": "^3.3.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "babel-preset-stage-2": "^6.24.1",
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0",
+    "nodemon": "^1.18.5",
+    "supertest": "^3.3.0",
     "webpack": "^4.23.0",
     "webpack-cli": "^3.1.2"
   }
